frontend/agriroute/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: agriroute
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: grupo5-egs-deti.ua.pt
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: agriroute-frontend
              port:
                number: 80
        - path: /api/booking
          pathType: Prefix
          backend:
            service:
              name: booking
              port:
                number: 8005
